minor java 11 tweaks, docs, cleanup