@@ -144,8 +144,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>11</release>
         </configuration>
       </plugin>
 
@@ -155,7 +154,8 @@
         <version>2.22.2</version>
         <configuration>
           <!-- @{argLine} is necessary here so that that the jacoco:prepare-agent output is included for tests -->
-          <argLine>@{argLine} -Xmx1024m -Xverify:none -XX:TieredStopAtLevel=1</argLine>
+          <!-- illegal-access=permit required for java 11 -->
+          <argLine>@{argLine} -Xmx1024m -Xverify:none -XX:TieredStopAtLevel=1 --illegal-access=permit</argLine>
         </configuration>
       </plugin>
 
@@ -554,7 +554,6 @@
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
       <version>4.2.3</version>
-      <classifier>no_aop</classifier>
     </dependency>
 
     <dependency>
@@ -726,10 +725,18 @@
       <version>${swagger.ui.version}</version>
     </dependency>
 
+    <!-- java 11 requirement -->
     <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.27.0-GA</version>
+    </dependency>
+
+    <!-- java 11 requirement -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <version>3.3.0</version>
     </dependency>
 
     <dependency>
